--- a/info.plist
+++ b/info.plist
@@ -102,7 +102,18 @@
 		</dict>
 	</array>
 	<key>readme</key>
-	<string>Check time in multiple timezones 🌐️</string>
+	<string>Check time in multiple timezones 🌐️
+
+
+Environment Variables:
+
+* TIMEZONES: Comma separated list of timezones.
+
+
+
+---
+
+Valid timezones: https://github.com/fedecalendino/alfred-world-clock/blob/main/pytz/pytz/__init__.py#L517</string>
 	<key>uidata</key>
 	<dict>
 		<key>3F8E4DCC-0B66-40B7-837F-6487A406270D</key>
