--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,8 @@ alfred-pyflow = "*"
 pytz = "^2022.1"
 
 [tool.poetry.dev-dependencies]
-black = "*"
-coverage = "*"
-ddt = "*"
-pyinstaller = "*"
+black = "latest"
+pyinstaller = "latest"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
