--- a/info.plist
+++ b/info.plist
@@ -35,25 +35,6 @@
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>autopaste</key>
-				<false/>
-				<key>clipboardtext</key>
-				<string>{query}</string>
-				<key>ignoredynamicplaceholders</key>
-				<false/>
-				<key>transient</key>
-				<false/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.output.clipboard</string>
-			<key>uid</key>
-			<string>A045A16F-9199-47FD-B99A-D1C6AFDF7125</string>
-			<key>version</key>
-			<integer>3</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
 				<key>alfredfiltersresults</key>
 				<false/>
 				<key>alfredfiltersresultsmatchmode</key>
@@ -100,9 +81,36 @@
 			<key>version</key>
 			<integer>3</integer>
 		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>autopaste</key>
+				<false/>
+				<key>clipboardtext</key>
+				<string>{query}</string>
+				<key>ignoredynamicplaceholders</key>
+				<false/>
+				<key>transient</key>
+				<false/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.output.clipboard</string>
+			<key>uid</key>
+			<string>A045A16F-9199-47FD-B99A-D1C6AFDF7125</string>
+			<key>version</key>
+			<integer>3</integer>
+		</dict>
 	</array>
 	<key>readme</key>
-	<string>Check time in multiple timezones. 🌐️</string>
+	<string>Check time in multiple timezones. 🌐️
+
+
+---
+
+
+TIMEZONES:
+
+Valid timezones can be found here: https://github.com/fedecalendino/alfred-world-clock/blob/main/timezones</string>
 	<key>uidata</key>
 	<dict>
 		<key>A045A16F-9199-47FD-B99A-D1C6AFDF7125</key>
@@ -121,14 +129,31 @@
 		</dict>
 	</dict>
 	<key>userconfigurationconfig</key>
-	<array/>
-	<key>variables</key>
-	<dict>
-		<key>TIMEZONES</key>
-		<string>Europe/Prague,America/Argentina/Buenos_Aires</string>
-	</dict>
+	<array>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>default</key>
+				<string>America/Argentina/Buenos_Aires</string>
+				<key>required</key>
+				<true/>
+				<key>trim</key>
+				<true/>
+				<key>verticalsize</key>
+				<integer>6</integer>
+			</dict>
+			<key>description</key>
+			<string>One timezone per line.</string>
+			<key>label</key>
+			<string>TIMEZONES</string>
+			<key>type</key>
+			<string>textarea</string>
+			<key>variable</key>
+			<string>TIMEZONES</string>
+		</dict>
+	</array>
 	<key>version</key>
-	<string>1.2.0</string>
+	<string>1.3.0</string>
 	<key>webaddress</key>
 	<string>https://github.com/fedecalendino/alfred-world-clock</string>
 </dict>
