--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "World Clock"
-version = "1.2.0"
+version = "1.3.0"
 description = "Check time in multiple timezones."
 documentation = "https://github.com/fedecalendino/alfred-world-clock/blob/main/README.md"
 homepage = "https://github.com/fedecalendino/alfred-world-clock"
@@ -13,11 +13,11 @@ authors = [
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
 alfred-pyflow = "*"
-pytz = "^2022.1"
+pytz = "^2022.4"
 
 [tool.poetry.dev-dependencies]
-black = "latest"
-pyinstaller = "latest"
+black = "22.10.0)"
+pyinstaller = "5.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
