--- a/info.plist
+++ b/info.plist
@@ -79,7 +79,7 @@
 				<key>runningsubtext</key>
 				<string></string>
 				<key>script</key>
-				<string>./dist/main/main $@</string>
+				<string>/usr/bin/python3 ./dist/main.py $@</string>
 				<key>scriptargtype</key>
 				<integer>1</integer>
 				<key>scriptfile</key>
@@ -153,7 +153,7 @@ Valid timezones can be found here: https://github.com/fedecalendino/alfred-world
 		</dict>
 	</array>
 	<key>version</key>
-	<string>1.3.0</string>
+	<string>1.5.0</string>
 	<key>webaddress</key>
 	<string>https://github.com/fedecalendino/alfred-world-clock</string>
 </dict>
