--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ authors = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
-alfred-pyflow = "latest"
+# EPM: Poetry complained about "latest" here, so set to current release 0.3.3 instead
+alfred-pyflow = "0.3.3"
 pytz = "^2022.7"
 
 [tool.poetry.dev-dependencies]
