wip:INCLUDE_MILLISECONDS

--- a/info.plist
+++ b/info.plist
@@ -1429,6 +1429,25 @@
 			<key>variable</key>
 			<string>HOME</string>
 		</dict>
+        <dict>
+			<key>config</key>
+			<dict>
+				<key>default</key>
+				<true/>
+				<key>required</key>
+				<false/>
+				<key>text</key>
+				<string>Include millisecods</string>
+			</dict>
+			<key>description</key>
+			<string>Include millisecods in ISO8601 timestamp.</string>
+			<key>label</key>
+			<string>Format</string>
+			<key>type</key>
+			<string>checkbox</string>
+			<key>variable</key>
+			<string>INCLUDE_MILLISECONDS</string>
+		</dict>
 		<dict>
 			<key>config</key>
 			<dict>
