--- a/info.plist
+++ b/info.plist
@@ -1441,17 +1441,17 @@
 						<string>FORMAT_DEFAULT</string>
 					</array>
 					<array>
-						<string>ISO8601</string>
-						<string>FORMAT_ISO8601</string>
+						<string>ISO8601 (with microseconds)</string>
+						<string>FORMAT_ISO8601_WITH_MICROSECONDS</string>
 					</array>
 					<array>
-						<string>ISO8601 (with microseconds)</string>
-						<string>FORMAT_ISO8601_MICROSECONDS</string>
+						<string>ISO8601 (without microseconds)</string>
+						<string>FORMAT_ISO8601_WITHOUT_MICROSECONDS</string>
 					</array>
 				</array>
 			</dict>
 			<key>description</key>
-			<string>The formatting of the timestamp.</string>
+			<string>The timestamp display/copy format.</string>
 			<key>label</key>
 			<string>Format</string>
 			<key>type</key>
