--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ authors = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
-alfred-pyflow = "latest"
+alfred-pyflow = ">=0.3.3"
 pytz = "^2022.7"
 
 [tool.poetry.dev-dependencies]
