--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,14 @@ authors = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
-alfred-pyflow = ">=0.3.3"
 pytz = "^2022.7.1"
+alfred-pyflow = "^0.4.5"
 
 [tool.poetry.dev-dependencies]
 black = "23.1.0"
+
+[tool.poetry.group.dev.dependencies]
+black = "^23.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
