--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,12 @@ python = ">=3.8,<3.11"
 pytz = "^2022.7.1"
 alfred-pyflow = "^0.4.5"
 
-[tool.poetry.dev-dependencies]
-black = "23.1.0"
+
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
+coverage = "^7.2.5"
+ddt = "^1.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
