Added new functions (Meet, add_time, get_utc) (#18)
* fix(info.plist): add missing key-value pair for new dict entry to fix plist structure
feat(info.plist): add new script filter to display current time in different timezones
fix(main.py): add support for adding/subtracting time in the command line argument to display time in the future/past
fix(main.py): add UTC offset to the displayed time in each timezone

feat(meet.py): add new file meet.py to the project
refactor(meet.py): remove unused imports and commented code
refactor(meet.py): remove unused variable BASE_DIR
refactor(meet.py): remove unused function workflow_default
refactor(meet.py): remove unused function convert_to_datetime
refactor(meet.py): remove unused function get_home_
refactor(meet.py): remove unused function get_timezones_
refactor(meet.py): remove unused function handleinput
refactor(meet.py): remove unused function meet
refactor(meet.py): remove unused import JSONEncoder
refactor(meet.py): remove unused import json
refactor(meet.py): remove unused import formatters
refactor(meet.py): remove unused import data
refactor(meet.py): remove unused import pytz
refactor(meet.py): remove unused import timedelta
refactor(meet.py): remove unused import datetime
refactor(meet

* chore(info.plist): remove unused keyword2 configuration to clean up the file
feat(info.plist): add new keyword configuration with required and trim properties to improve functionality and user experience

---------

Co-authored-by: Marc Otten <marc.otten@bcnexxt.com>

--- a/info.plist
+++ b/info.plist
@@ -8,6 +8,19 @@
 	<string>Internet</string>
 	<key>connections</key>
 	<dict>
+		<key>74C9B0B4-563E-4B9E-AB06-11A3157D63A1</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>2FA65F99-0AC5-4479-B3B8-6FF41B2C9982</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 		<key>FAC9CF11-4629-4710-85E3-1651334E92C1</key>
 		<array>
 			<dict>
@@ -63,7 +76,7 @@
 				<key>argumenttrimmode</key>
 				<integer>0</integer>
 				<key>argumenttype</key>
-				<integer>2</integer>
+				<integer>1</integer>
 				<key>escaping</key>
 				<integer>102</integer>
 				<key>keyword</key>
@@ -91,7 +104,7 @@
 				<key>type</key>
 				<integer>0</integer>
 				<key>withspace</key>
-				<false/>
+				<true/>
 			</dict>
 			<key>type</key>
 			<string>alfred.workflow.input.scriptfilter</string>
@@ -100,24 +113,106 @@
 			<key>version</key>
 			<integer>3</integer>
 		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>alfredfiltersresults</key>
+				<false/>
+				<key>alfredfiltersresultsmatchmode</key>
+				<integer>0</integer>
+				<key>argumenttreatemptyqueryasnil</key>
+				<false/>
+				<key>argumenttrimmode</key>
+				<integer>0</integer>
+				<key>argumenttype</key>
+				<integer>1</integer>
+				<key>escaping</key>
+				<integer>102</integer>
+				<key>keyword</key>
+				<string>{var:keyword2}</string>
+				<key>queuedelaycustom</key>
+				<integer>3</integer>
+				<key>queuedelayimmediatelyinitially</key>
+				<false/>
+				<key>queuedelaymode</key>
+				<integer>1</integer>
+				<key>queuemode</key>
+				<integer>2</integer>
+				<key>runningsubtext</key>
+				<string>Calculating times…</string>
+				<key>script</key>
+				<string>/usr/bin/python3 ./dist/meet.py $@</string>
+				<key>scriptargtype</key>
+				<integer>1</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>subtext</key>
+				<string>Display current time in different timezones</string>
+				<key>title</key>
+				<string>World Clock</string>
+				<key>type</key>
+				<integer>0</integer>
+				<key>withspace</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.scriptfilter</string>
+			<key>uid</key>
+			<string>74C9B0B4-563E-4B9E-AB06-11A3157D63A1</string>
+			<key>version</key>
+			<integer>3</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>autopaste</key>
+				<false/>
+				<key>clipboardtext</key>
+				<string>{query}</string>
+				<key>ignoredynamicplaceholders</key>
+				<false/>
+				<key>transient</key>
+				<false/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.output.clipboard</string>
+			<key>uid</key>
+			<string>2FA65F99-0AC5-4479-B3B8-6FF41B2C9982</string>
+			<key>version</key>
+			<integer>3</integer>
+		</dict>
 	</array>
 	<key>readme</key>
 	<string>Check time in multiple timezones. 🌐️</string>
 	<key>uidata</key>
 	<dict>
+		<key>2FA65F99-0AC5-4479-B3B8-6FF41B2C9982</key>
+		<dict>
+			<key>xpos</key>
+			<real>620</real>
+			<key>ypos</key>
+			<real>305</real>
+		</dict>
+		<key>74C9B0B4-563E-4B9E-AB06-11A3157D63A1</key>
+		<dict>
+			<key>xpos</key>
+			<real>370</real>
+			<key>ypos</key>
+			<real>305</real>
+		</dict>
 		<key>A045A16F-9199-47FD-B99A-D1C6AFDF7125</key>
 		<dict>
 			<key>xpos</key>
-			<real>280</real>
+			<real>610</real>
 			<key>ypos</key>
-			<real>15</real>
+			<real>165</real>
 		</dict>
 		<key>FAC9CF11-4629-4710-85E3-1651334E92C1</key>
 		<dict>
 			<key>xpos</key>
-			<real>30</real>
+			<real>360</real>
 			<key>ypos</key>
-			<real>15</real>
+			<real>165</real>
 		</dict>
 	</dict>
 	<key>userconfigurationconfig</key>
@@ -142,6 +237,27 @@
 			<string>textfield</string>
 			<key>variable</key>
 			<string>keyword</string>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>default</key>
+				<string>meet</string>
+				<key>placeholder</key>
+				<string></string>
+				<key>required</key>
+				<true/>
+				<key>trim</key>
+				<true/>
+			</dict>
+			<key>description</key>
+			<string></string>
+			<key>label</key>
+			<string></string>
+			<key>type</key>
+			<string>textfield</string>
+			<key>variable</key>
+			<string>keyword2</string>
 		</dict>
 		<dict>
 			<key>config</key>
