--- a/info.plist
+++ b/info.plist
@@ -6,6 +6,32 @@
 	<string>com.github.fedecalendino.alfred-world-clock</string>
 	<key>connections</key>
 	<dict>
+		<key>04AD91B0-44A7-43D0-BF51-BF662868DB59</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>A045A16F-9199-47FD-B99A-D1C6AFDF7125</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+		<key>7C925AA3-9EEC-4C12-8792-8D6802E63375</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>A045A16F-9199-47FD-B99A-D1C6AFDF7125</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 		<key>FAC9CF11-4629-4710-85E3-1651334E92C1</key>
 		<array>
 			<dict>
@@ -30,6 +56,55 @@
 	<string>World Clock</string>
 	<key>objects</key>
 	<array>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>alfredfiltersresults</key>
+				<false/>
+				<key>alfredfiltersresultsmatchmode</key>
+				<integer>0</integer>
+				<key>argumenttreatemptyqueryasnil</key>
+				<false/>
+				<key>argumenttrimmode</key>
+				<integer>0</integer>
+				<key>argumenttype</key>
+				<integer>1</integer>
+				<key>escaping</key>
+				<integer>102</integer>
+				<key>keyword</key>
+				<string>{var:now}</string>
+				<key>queuedelaycustom</key>
+				<integer>3</integer>
+				<key>queuedelayimmediatelyinitially</key>
+				<false/>
+				<key>queuedelaymode</key>
+				<integer>1</integer>
+				<key>queuemode</key>
+				<integer>2</integer>
+				<key>runningsubtext</key>
+				<string></string>
+				<key>script</key>
+				<string>/usr/bin/python3 ./dist/main.py $@</string>
+				<key>scriptargtype</key>
+				<integer>1</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>subtext</key>
+				<string>check the current time in multiple timezones.</string>
+				<key>title</key>
+				<string>World Clock</string>
+				<key>type</key>
+				<integer>0</integer>
+				<key>withspace</key>
+				<false/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.scriptfilter</string>
+			<key>uid</key>
+			<string>FAC9CF11-4629-4710-85E3-1651334E92C1</string>
+			<key>version</key>
+			<integer>3</integer>
+		</dict>
 		<dict>
 			<key>config</key>
 			<dict>
@@ -61,11 +136,11 @@
 				<key>argumenttrimmode</key>
 				<integer>0</integer>
 				<key>argumenttype</key>
-				<integer>1</integer>
+				<integer>0</integer>
 				<key>escaping</key>
 				<integer>102</integer>
 				<key>keyword</key>
-				<string>{var:now}</string>
+				<string>{var:meet}</string>
 				<key>queuedelaycustom</key>
 				<integer>3</integer>
 				<key>queuedelayimmediatelyinitially</key>
@@ -75,26 +150,75 @@
 				<key>queuemode</key>
 				<integer>2</integer>
 				<key>runningsubtext</key>
-				<string>Calculating times…</string>
+				<string></string>
 				<key>script</key>
-				<string>/usr/bin/python3 ./dist/now.py $@</string>
+				<string>/usr/bin/python3 ./dist/main.py $@</string>
 				<key>scriptargtype</key>
 				<integer>1</integer>
 				<key>scriptfile</key>
 				<string></string>
 				<key>subtext</key>
-				<string>Display current time in different timezones</string>
+				<string>for example: {var:meet} 04:20 / {var:meet} 01:21 1985-10-26</string>
 				<key>title</key>
-				<string>World Clock</string>
+				<string>World Clock: check a specific time/date in multiple timezones</string>
 				<key>type</key>
 				<integer>0</integer>
 				<key>withspace</key>
-				<false/>
+				<true/>
 			</dict>
 			<key>type</key>
 			<string>alfred.workflow.input.scriptfilter</string>
 			<key>uid</key>
-			<string>FAC9CF11-4629-4710-85E3-1651334E92C1</string>
+			<string>7C925AA3-9EEC-4C12-8792-8D6802E63375</string>
+			<key>version</key>
+			<integer>3</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>alfredfiltersresults</key>
+				<false/>
+				<key>alfredfiltersresultsmatchmode</key>
+				<integer>0</integer>
+				<key>argumenttreatemptyqueryasnil</key>
+				<false/>
+				<key>argumenttrimmode</key>
+				<integer>0</integer>
+				<key>argumenttype</key>
+				<integer>0</integer>
+				<key>escaping</key>
+				<integer>102</integer>
+				<key>keyword</key>
+				<string>{var:offset}</string>
+				<key>queuedelaycustom</key>
+				<integer>3</integer>
+				<key>queuedelayimmediatelyinitially</key>
+				<false/>
+				<key>queuedelaymode</key>
+				<integer>1</integer>
+				<key>queuemode</key>
+				<integer>2</integer>
+				<key>runningsubtext</key>
+				<string></string>
+				<key>script</key>
+				<string>/usr/bin/python3 ./dist/main.py $@</string>
+				<key>scriptargtype</key>
+				<integer>1</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>subtext</key>
+				<string>for example: {var:offset} 2h30m / {var:offset} 1d12h</string>
+				<key>title</key>
+				<string>World Clock: check the current time (with an offset) in multiple timezones</string>
+				<key>type</key>
+				<integer>0</integer>
+				<key>withspace</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.scriptfilter</string>
+			<key>uid</key>
+			<string>04AD91B0-44A7-43D0-BF51-BF662868DB59</string>
 			<key>version</key>
 			<integer>3</integer>
 		</dict>
@@ -103,12 +227,26 @@
 	<string>Check time in multiple timezones. 🌐️</string>
 	<key>uidata</key>
 	<dict>
+		<key>04AD91B0-44A7-43D0-BF51-BF662868DB59</key>
+		<dict>
+			<key>xpos</key>
+			<real>35</real>
+			<key>ypos</key>
+			<real>270</real>
+		</dict>
+		<key>7C925AA3-9EEC-4C12-8792-8D6802E63375</key>
+		<dict>
+			<key>xpos</key>
+			<real>35</real>
+			<key>ypos</key>
+			<real>150</real>
+		</dict>
 		<key>A045A16F-9199-47FD-B99A-D1C6AFDF7125</key>
 		<dict>
 			<key>xpos</key>
 			<real>280</real>
 			<key>ypos</key>
-			<real>30</real>
+			<real>150</real>
 		</dict>
 		<key>FAC9CF11-4629-4710-85E3-1651334E92C1</key>
 		<dict>
@@ -133,7 +271,7 @@
 				<true/>
 			</dict>
 			<key>description</key>
-			<string>Keyword to check time in multiple timezones.</string>
+			<string>Keyword to check the current time in multiple timezones.</string>
 			<key>label</key>
 			<string>Now Keyword</string>
 			<key>type</key>
@@ -154,13 +292,34 @@
 				<true/>
 			</dict>
 			<key>description</key>
-			<string>Keyword a specific time in multiple timezones.</string>
+			<string>Keyword to check a specific time/date in multiple timezones.</string>
 			<key>label</key>
 			<string>Meet Keyword</string>
 			<key>type</key>
 			<string>textfield</string>
 			<key>variable</key>
 			<string>meet</string>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>default</key>
+				<string>offset</string>
+				<key>placeholder</key>
+				<string></string>
+				<key>required</key>
+				<true/>
+				<key>trim</key>
+				<true/>
+			</dict>
+			<key>description</key>
+			<string>Keyword to check the current time (with an offset) in multiple timezones.</string>
+			<key>label</key>
+			<string>Offset Keyword</string>
+			<key>type</key>
+			<string>textfield</string>
+			<key>variable</key>
+			<string>offset</string>
 		</dict>
 		<dict>
 			<key>config</key>
