--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ authors = [
 python = ">=3.8,<3.12"
 alfred-pyflow = "^0.4.6"
 pytz = "^2023.3"
+pytimeparse = "^1.1.8"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
